--- a/style.css
+++ b/style.css
@@ -127,3 +127,12 @@ width :none;
     font: bold;
     text-shadow: 1px 1px 1px;
 }
+#mod{
+    text-align:left;
+    font-family: Arial, Helvetica, sans-serif;
+    opacity: 1; 
+
+}
+#mod{
+    text-decoration: none;
+}
